--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       – name: checkout code
         uses: actions/checkout@v2
+        with:
+          ref: master
       – name: install buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
