--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      – uses: actions/checkout@v2
+      – name: checkout code
+        uses: actions/checkout@v2
         with:
           ref: master
       – name: install buildx
